# backend_API

./: db.sqlite3  pyproject.toml
booksAPI/: asgi.py  settings.py  urls.py  wsgi.py
booksAPI/templates/: oauth.html
store/: admin.py  models.py  permissions.py  serializers.py  views.py
store/migrations/: 0001_initial.py  0002_book_author_name.py  0003_book_owner.py  0004_alter_book_owner_userbookrelation.py  0005_book_readers_alter_book_owner_and_more.py  0006_alter_userbookrelation_rate.py
store/tests/: logic.py  test_api.py  test_logic.py  test_serializers.py
