[tool.poetry]
name = "back-on-django"
version = "0.1.0"
description = "It's django project"
authors = ["Azat Yanberdin <azatdjon@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
